css/style.css
@media (max-width: 767px) {
  .info {
    display: block;
  }
}
@media (min-width: 768px) {
  .info {
    display: none;
  }
}

html{
  margin: 0;
}

body, .main{
  margin: 0;
  padding: 0;
}

/*!*top menu v animacii*!*/
/*  .verticalMenu{*/
/*    display: none;*/
/*  }*/

/*  .navbar {*/
/*   !*position: -webkit-sticky;*/
/*    position: sticky;*/
/*    top: 0;*!*/
/*    width: 100%;*/
/*  }*/

/*  .navbar a {*/
/*    float: left;*/
/*    color: white;*/
/*    text-decoration: none;*/
/*    font-size: 1.5em;*/
/*    font-weight: bold;*/
/*    width: 18%; !* Four links of equal widths *!*/
/*    text-align: center;*/
/*    margin:0 1%;*/
/*    background: #0f6e21;*/
/*  }*/

/*  .navbar a.classic:hover {*/
/*    color: black;*/
/*  }*/

/*  .help{*/
/*    cursor: help;*/
/*  }*/

/*  .score:hover{*/
/*  	cursor: auto;*/
/*  }*/

/*hlavný obsah---------------------------------------------------------*/
  #main{
    width: 100%;
    background: yellow;
  }

/*---------prava strana ---------------------*/
/*  #info{*/
/*    float: left;*/
/*    margin-top: 1vw;*/
/*    background: #adadad;*/
/*    max-height: 640px;*/
/*    min-width: 20vw;*/
/*    !*max-width:100%;*/
/*    display: none;*!*/
/*    width: 50%;*/
/*    padding-bottom: 1vh;*/
/*  }*/

/*  #info h1{*/
/*    !*margin-top: : 2em;*/
/*    padding: 0;*!*/
/*    margin-top: 0;*/
/*    margin-bottom: 5px;*/
/*    text-align: center;*/
/*  }*/

  .textInfo{
    margin:0 1vw 0 1vw;
    overflow: auto;
    /*background: green;*/
    font-size: 1.2em;
  }

  .textInfo a{
    color:blue;
  }

  .close{
    position: relative;
    top: 5px;
    right: -5px;
    margin: 0.2em;
    cursor: pointer;
    display: none;
    width: 4%;
    height: 8%;
  }

  /*velkost písma*/
  .big{
    font-size: 2em;
    margin-left: 1em;
  }

  .componentInfo{
    display: none;
    position: absolute;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    background-color: rgba(15, 15, 15, 0.7);
    overflow: auto;
  }

/*doplnkove info-----------------------------*/
  .accordion {
    background: #0f6e21;
    color: white;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    text-align: left;
    border: none;
    outline: none;
    transition: 0.4s;
  }

  .accordion a{
    color: white;
    text-decoration: none;
  }

  .active, .accordion:hover {
    background-color: #6e6e6e;
    color: white;
  }

/* Style the accordion panel. Note: hidden by default */
  .panel {
    padding: 0 18px;
    display: none;
    overflow: hidden;
  }

/*tabulky--------------------------*/
  table {
    border-collapse: collapse;
  }

  table, th, td {
    border: 1px solid black;
  }

  th, td {
    padding: 15px;
    text-align: center;
  }

  th{
    background: #0f6e21;
    color: white;
  }

  .dva{
    background: #8c8c8c;
  }


/*---------lava strana---------*/
  #con{
  	margin-top: 1vw;
    padding:0;
  	/*max-width: 864px;
  	max-height: 570px;*/
  	/*background: #00A020;*/
  	position: relative;
  	top: 0;
  	left: 0;
    text-align: center;
  }

  #plan{
    display: inline-block;
    position: relative;
    width: 65vw;
    height: auto;
  }

  /*suhlas použitých fotografií*/
  .agree{
    font-size: 0.8em;
  }

  #con a{
    color:blue;
  }

  /*napis, na ktorý komponent ukazuje*/
  .thisCom{
    margin-left: 2em;
  }

  .active{
    opacity: 0.5;
  }

/*-----------componenty----------------*/


  .rasp{
  	  position: relative;
  	  top: 0;
    	left: 0;
  }

  .component{
    opacity: 0;
  }

  .component:hover{
    opacity: 0.3;
  }

